?      njf - NumberFactory has been changed to create the number from a String
             representation (in order to allow creation of arbitrary precision
             numbers without the limitations of double)

Many previous changes not included here. See the documentation for details.

== org.lsmp.* =======================================================

May 02 05 rjm - added toBase pfmc and a BaseFormat NumberFormat object.

Apr 24 05 rjm - Reworked junit tests using inheretance.

Apr 24 05 rjm - Simpson and Trapesium functionsa added to XJep.

Apr 03 05 rjm - DifferentationVisitor is now smarter when calculating zero derivatives
			  - PrintVisitor.getMode(int testmode) added.
			  
Apr 01 05 rjm - MVector, Matrix, Tensor no longer extend number.

Apr 01 05 rjm - Added det(), trace(), vsum(), trans(), getDiag(), diag(), id(),
	GenMat, Map function to vectorJep. Need to check diff and matrixJep functionality.

Apr 01 05 rjm - added SpecialPreprocessorI interface for matrixJep functions.

Feb 13 05 rjm - added len() and size() functions
		   - added Scaler.getInstance() and Vector.getInstance() methods.
		   
Dec 21 rjm - xjep.PrintVisitor can now work with three or more arguments to + and *.

Dec 10 rjm - Implemented element by element multiplication in VectorJep
			 nodeAccept method added to jep.EvaluationVisitor so that it
			 can be easier for sub classes to use visitor pattern.
			 
		   - Improved printing facilities for complex numbers.
		   
		   - xjep.PrintVisitor now allows a NumberFormat object to be specified to control 
		     the printing of double values.
		     
		   - ExtendedFreeGroup added to GroupJep this allows a limited 
		     use of ^ and / for polynomials. Polynomials can be raised to 
		     positive integer powers and divided by constants.

Oct 4  rjm - Added rules to differentiate atan2 removed support for angle